tests/neg/type_error9.scala
class Main {
  val x = y
  val y = x
}